add starting lineups and more FC

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "bluebird": "^3.7.2",
+    "cheerio": "^1.0.0-rc.10",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "jquery": "^3.6.0",
